fix and larger alignment rendering

--- a/public/stylesheets/statnlpbookScrollReveal.css
+++ b/public/stylesheets/statnlpbookScrollReveal.css
@@ -38,6 +38,10 @@
     font-size: 20px;
 }
 
+.aligner text {
+    font-size: 20px;
+}
+
 .slideStart {
     padding-top: 5%;
     /*height:5%;*/
